fix address overflowing

--- a/universal-login-wallet/src/styles/layout/_header.sass
+++ b/universal-login-wallet/src/styles/layout/_header.sass
@@ -13,7 +13,6 @@
   display: flex
   align-items: center
   height: 46px
-  max-width: 276px
   padding: 0 14px 0 18px
   border-right: 1px solid #F2F2FA
   border-left: 1px solid #F2F2FA
